# papara_nt

./: .gitmodules  AndroidManifest.xml  CMakeLists.txt  align_pvec_vec.h  align_utils.h  align_vec.h  aligned_buffer.h  android_native_app_glue.c  android_native_app_glue.h  android_ndk_env.sh  blast_partassign.cpp  blast_partassign.h  build_papara2.sh  call_main2.cpp  dtw.cpp  dtw.h  dump_anc_probs.cpp  epa_extract_qs_covered.cpp  fasta.h  fasta_random_sample.cpp  fasta_random_sample2.cpp  fasta_to_phy.cpp  inherit_test.cpp  main.cpp  math_approx.h  pairwise_seq_distance.cpp  pairwise_seq_distance.h  pan.cpp  pan.h  pan_main.cpp  papara.cpp  papara.h  papara2_main.cpp  papara_nt.kdev4  papara_tbb.cpp  pars_align_gapp_seq.cpp  pars_align_gapp_seq.h  pars_align_seq.cpp  pars_align_seq.h  pars_align_vec.cpp  (+28 more)
res/values/: strings.xml  strings.xml~
ublasJama-1.0.2.3/: CMakeLists.txt  CholeskyDecomposition.cpp  EigenvalueDecomposition.cpp  LUDecomposition.cpp  QRDecomposition.cpp
